# snippy

./: .gitignore  CMakeLists.txt  CMakePresets.json  install.sh  kernel.cpp  kernel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  removeemptyfoldersproxymodel.cpp  removeemptyfoldersproxymodel.h  resources.qrc  snippet.cpp  snippet.h  snippetmodel.cpp  snippetmodel.h  snippetproxymodel.cpp  snippetproxymodel.h  snippy.pro  style.qss  syntaxhighlighter.cpp  syntaxhighlighter.h  textedit.cpp  textedit.h  vscode.code-workspace
.github/workflows/: cmake.yml
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/test_data/sub1/: 1.1.snip  1.3.snip
